// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loader > snapshots > matches snapshot with children 1`] = `
<DocumentFragment>
  <div
    class="sc-dVBluf iYAHRU aje-loader is-medium"
    data-placement="center"
  >
    <div
      class="sc-FEMpB BJcTP aje-flex"
    >
      Loading...
    </div>
  </div>
</DocumentFragment>
`;

exports[`Loader > snapshots > matches snapshot without children 1`] = `
<DocumentFragment>
  <div
    class="sc-dVBluf iYAHRU aje-loader is-medium"
    data-placement="center"
  >
    <div
      class="sc-FEMpB BJcTP aje-flex"
    />
  </div>
</DocumentFragment>
`;
